--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,234 @@
-name: CI
+name: ci
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
 
 permissions:
-  actions: read
   contents: read
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  main:
+  # Build + Lint + Typecheck + Unit tests + Build artefacts
+  build:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: hyperstack_auth
+          POSTGRES_USER: hyperstack
+          POSTGRES_PASSWORD: hyperstack
+        ports: [ "5432:5432" ]
+        options: >-
+          --health-cmd="pg_isready -U hyperstack -d hyperstack_auth"
+          --health-interval=5s --health-timeout=3s --health-retries=30
+
+      redis:
+        image: redis:7-alpine
+        ports: [ "6379:6379" ]
+        options: >-
+          --health-cmd="redis-cli ping || exit 1"
+          --health-interval=5s --health-timeout=3s --health-retries=30
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
-          filter: tree:0
           fetch-depth: 0
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          version: 9.8.0
-          run_install: false
+          version: 9.12.0
 
-      # This enables task distribution via Nx Cloud
-      # Run this command as early as possible, before dependencies are installed
-      # Learn more at https://nx.dev/ci/reference/nx-cloud-cli#npx-nxcloud-startcirun
-      # Uncomment this line to enable task distribution
-      # - run: pnpm dlx nx start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="build"
-
-      # Cache node_modules
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: pnpm
+
+      - name: Install deps
+        run: pnpm install --frozen-lockfile
+
+      # ----- Espera explícita a servicios -----
+      - name: Wait for Postgres
+        run: |
+          for i in {1..60}; do
+            pg_isready -h localhost -p 5432 -U hyperstack -d hyperstack_auth && exit 0
+            sleep 2
+          done
+          echo "Postgres no respondió a tiempo"; exit 1
+
+      - name: Wait for Redis
+        run: |
+          for i in {1..60}; do
+            (echo PING | nc -w 1 localhost 6379 | grep -q PONG) && exit 0 || true
+            sleep 2
+          done
+          echo "Redis no respondió a tiempo"; exit 1
+
+      # ----- Prisma -----
+      - name: Prisma Generate (auth-service)
+        run: pnpm --filter @hyperstack/auth-service prisma:generate
+
+      - name: Prisma Migrate deploy (auth-service)
+        env:
+          AUTH_DATABASE_URL: postgres://hyperstack:hyperstack@localhost:5432/hyperstack_auth
+        run: pnpm --filter @hyperstack/auth-service prisma migrate deploy --schema=./prisma/schema.prisma
+
+      # ----- Claves JWT dummy -----
+      - name: Generate JWT keys (CI)
+        run: |
+          mkdir -p keys
+          openssl genrsa -out keys/private.pem 2048
+          openssl rsa -in keys/private.pem -pubout -out keys/public.pem
+
+      # ----- Lint / Typecheck / Unit Tests -----
+      - name: Lint
+        run: pnpm -w nx run-many -t lint --all --parallel
+
+      - name: Typecheck
+        run: pnpm -w nx run-many -t typecheck --all --parallel
+
+      - name: Unit tests
+        env:
+          NODE_ENV: test
+          AUTH_DATABASE_URL: postgres://hyperstack:hyperstack@localhost:5432/hyperstack_auth
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
+          JWT_PRIVATE_KEY_FILE: keys/private.pem
+          JWT_PUBLIC_KEY_FILE: keys/public.pem
+          JWT_KID: dev-key-1
+          JWT_ISS: https://auth.hyperstack.local
+          JWT_AUD: hyperstack-api
+        run: pnpm -w nx run-many -t test --all --parallel
+
+      # ----- Build (prod) -----
+      - name: Build (prod)
+        env:
+          AUTH_DATABASE_URL: postgres://hyperstack:hyperstack@localhost:5432/hyperstack_auth
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
+          JWT_PRIVATE_KEY_FILE: keys/private.pem
+          JWT_PUBLIC_KEY_FILE: keys/public.pem
+          JWT_KID: dev-key-1
+          JWT_ISS: https://auth.hyperstack.local
+          JWT_AUD: hyperstack-api
+        run: pnpm -w nx run-many -t build --all --configuration=production --parallel
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: |
+            apps/auth-service/dist
+            apps/gateway/dist
+
+  # E2E — levanta apps y pega a /api/auth/*
+  e2e:
+    needs: build
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_DB: hyperstack_auth
+          POSTGRES_USER: hyperstack
+          POSTGRES_PASSWORD: hyperstack
+        ports: [ "5432:5432" ]
+        options: >-
+          --health-cmd="pg_isready -U hyperstack -d hyperstack_auth"
+          --health-interval=5s --health-timeout=3s --health-retries=30
+
+      redis:
+        image: redis:7-alpine
+        ports: [ "6379:6379" ]
+        options: >-
+          --health-cmd="redis-cli ping || exit 1"
+          --health-interval=5s --health-timeout=3s --health-retries=30
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: pnpm/action-setup@v4
+        with: { version: 9.12.0 }
+
+      - uses: actions/setup-node@v4
+        with: { node-version: 20, cache: pnpm }
 
       - run: pnpm install --frozen-lockfile
 
-      # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
-      # - run: pnpm exec nx-cloud record -- echo Hello World
-      - run: pnpm exec nx run-many -t lint test build typecheck
-      # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
-      - run: pnpm exec nx fix-ci
-        if: always()
+      # ----- Espera servicios -----
+      - name: Wait for Postgres
+        run: |
+          for i in {1..60}; do
+            pg_isready -h localhost -p 5432 -U hyperstack -d hyperstack_auth && exit 0
+            sleep 2
+          done
+          echo "Postgres no respondió a tiempo"; exit 1
+
+      - name: Wait for Redis
+        run: |
+          for i in {1..60}; do
+            (echo PING | nc -w 1 localhost 6379 | grep -q PONG) && exit 0 || true
+            sleep 2
+          done
+          echo "Redis no respondió a tiempo"; exit 1
+
+      # ----- Claves JWT dummy -----
+      - name: Generate JWT keys (CI)
+        run: |
+          mkdir -p keys
+          openssl genrsa -out keys/private.pem 2048
+          openssl rsa -in keys/private.pem -pubout -out keys/public.pem
+
+      # ----- Migraciones para e2e -----
+      - name: Prisma Migrate deploy (auth-service)
+        env:
+          AUTH_DATABASE_URL: postgres://hyperstack:hyperstack@localhost:5432/hyperstack_auth
+        run: pnpm --filter @hyperstack/auth-service prisma migrate deploy --schema=./prisma/schema.prisma
+
+      # ----- Build y levantar apps en background -----
+      - name: Build services
+        run: |
+          pnpm --filter @hyperstack/auth-service build
+          pnpm --filter @hyperstack/gateway build
+
+      - name: Start auth-service + gateway
+        env:
+          AUTH_DATABASE_URL: postgres://hyperstack:hyperstack@localhost:5432/hyperstack_auth
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
+          JWT_PRIVATE_KEY_FILE: keys/private.pem
+          JWT_PUBLIC_KEY_FILE: keys/public.pem
+          JWT_KID: dev-key-1
+          JWT_ISS: https://auth.hyperstack.local
+          JWT_AUD: hyperstack-api
+        run: |
+          node apps/auth-service/dist/main.js > auth.log 2>&1 &
+          node apps/gateway/dist/main.js > gateway.log 2>&1 &
+
+          for i in {1..60}; do
+            curl -sS http://localhost:3000/api/auth/health | jq -e '.ok==true' && exit 0 || true
+            sleep 1
+          done
+          echo "Gateway/auth no levantó a tiempo"; echo "--- auth.log ---"; tail -n +1 auth.log; echo "--- gateway.log ---"; tail -n +1 gateway.log; exit 1
+
+      - name: Run E2E
+        run: pnpm test:e2e
+
+      - name: Upload logs on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-logs
+          path: |
+            auth.log
+            gateway.log
