--- a/apps/gateway/package.json
+++ b/apps/gateway/package.json
@@ -9,23 +9,17 @@
         "executor": "nx:run-commands",
         "options": {
           "command": "webpack-cli build",
-          "args": [
-            "--node-env=production"
-          ],
+          "args": ["--node-env=production"],
           "cwd": "apps/gateway"
         },
         "configurations": {
           "development": {
-            "args": [
-              "--node-env=development"
-            ]
+            "args": ["--node-env=development"]
           }
         }
       },
       "prune-lockfile": {
-        "dependsOn": [
-          "build"
-        ],
+        "dependsOn": ["build"],
         "cache": true,
         "executor": "@nx/js:prune-lockfile",
         "outputs": [
@@ -37,32 +31,23 @@
         }
       },
       "copy-workspace-modules": {
-        "dependsOn": [
-          "build"
-        ],
+        "dependsOn": ["build"],
         "cache": true,
-        "outputs": [
-          "{workspaceRoot}/apps/gateway/dist/workspace_modules"
-        ],
+        "outputs": ["{workspaceRoot}/apps/gateway/dist/workspace_modules"],
         "executor": "@nx/js:copy-workspace-modules",
         "options": {
           "buildTarget": "build"
         }
       },
       "prune": {
-        "dependsOn": [
-          "prune-lockfile",
-          "copy-workspace-modules"
-        ],
+        "dependsOn": ["prune-lockfile", "copy-workspace-modules"],
         "executor": "nx:noop"
       },
       "serve": {
         "continuous": true,
         "executor": "@nx/js:node",
         "defaultConfiguration": "development",
-        "dependsOn": [
-          "build"
-        ],
+        "dependsOn": ["build"],
         "options": {
           "buildTarget": "gateway:build",
           "runBuildTargetDependencies": false
@@ -77,8 +62,12 @@
         }
       },
       "test": {
+        "options": { "passWithNoTests": true }
+      },
+      "typecheck": {
+        "executor": "nx:run-commands",
         "options": {
-          "passWithNoTests": true
+          "command": "tsc --project apps/gateway/tsconfig.app.json --noEmit"
         }
       }
     }
@@ -91,11 +80,14 @@
     "@opentelemetry/sdk-node": "^0.52.1",
     "@opentelemetry/semantic-conventions": "^1.9.0",
     "helmet": "^8.1.0",
+    "jose": "^6.1.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.5"
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/ms": "^2.1.0"
   }
 }
