--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@swc/jest": "~0.2.38",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "esbuild": "^0.25.12",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^30.0.2",
@@ -76,8 +77,9 @@
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
-    "typescript": "~5.9.2",
+    "typescript": "~5.9.3",
     "typescript-eslint": "^8.40.0",
+    "webpack": "^5.102.1",
     "webpack-cli": "^5.1.4"
   }
 }
