--- a/apps/auth-service/tsconfig.app.json
+++ b/apps/auth-service/tsconfig.app.json
@@ -1,19 +1,29 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "types": ["node"],
-    "typeRoots": ["./src/types", "../../node_modules/@types"],
-    "rootDir": "src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
+
+    "target": "ES2022",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "es2021"
+    "useDefineForClassFields": false,
+
+    "types": ["node"],
+    "typeRoots": ["./src/types", "../../node_modules/@types"],
+
+    "strict": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*.ts"],
   "exclude": [
-    "out-tsc",
     "dist",
+    "out-tsc",
     "jest.config.ts",
     "src/**/*.spec.ts",
     "src/**/*.test.ts",
