--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "prisma": "6.18.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.3.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.40.0",
